# cryptobulls

./: .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TECH_WALKTHROUGH.md  package.json  tsconfig.json
cranker/: .env.example  package.json
cranker/src/: banner.mjs  check_conflicts.mjs  config.mjs  index.mjs  mascots.mjs  pfp_gallery.mjs  renderer.mjs  sample.mjs  showcase.mjs  smile_preview.mjs  svg_to_png.mjs
docs/: AUTHORITY.md  COMMS.md  LAUNCH.md  LAUNCH_CHECKLIST.md  LAUNCH_RUNBOOK.md  LAUNCH_SH_VALIDATION.md  MARKETPLACE.md  MARKETPLACE_VALIDATION.md  MONITORING.md  POST_LAUNCH.md  PRE_LAUNCH_AUDIT.md  RECOVERY.md
pfps/: index.html
programs/bullpeg/: Cargo.toml
programs/bullpeg/src/: errors.rs  lib.rs  state.rs
programs/bullpeg/src/instructions/: initialize.rs  initialize_collection.rs  mod.rs  unwrap_bull.rs  wrap_bull.rs
scripts/: audit_chain.sh  deploy_devnet.sh  devnet_initialize.ts  devnet_initialize_collection.ts  devnet_simulate_wrap.ts  devnet_unwrap_bull.ts  devnet_wrap_bull.ts  launch.sh  launch_preflight.sh  verify_unwrap.mjs  web_apply_mcc.sh
tests/: bullpeg.ts
web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/art/: page.tsx
web/app/components/: ConnectButton.tsx  Footer.tsx  Header.tsx  RecentlyWrapped.tsx  ShareButtons.tsx  WalletProviders.tsx
web/app/gallery/: page.tsx
web/lib/: cache.ts  chain.ts  idl.json  launch-state.ts  program.ts  program.ts.mcc  rarity.ts  renderer.mjs
(+13 files in other folders)
